# nxy

./: .envrc  .gitignore  Cargo.nix  Cargo.toml  flake.nix  sqlx-data.json
checks/: default.nix  tools.nix
checks/clients-connect/: default.nix  flake.nix  test-script.py
crates/agent/: Cargo.toml
crates/agent/src/: handler.rs  main.rs  state.rs
crates/deploy/: Cargo.toml
crates/deploy/src/: cli.rs  lib.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: error.rs  lib.rs  types.rs
lib/: default.nix
migrations/: 20221009070125_initial_migration.down.sql  20221009070125_initial_migration.sql  20221009070125_initial_migration.up.sql
modules/: agent.nix  default.nix  devshell.nix  packages.nix  rust.nix  server.nix  services.nix
nixosModules/: agent.nix  default.nix  server.nix
nxy-agent/: Cargo.toml
nxy-agent/src/: activate.rs  handler.rs  main.rs
nxy-cli/: Cargo.toml
nxy-cli/src/: args.rs  handler.rs  main.rs  utils.rs
nxy-cli/src/handler/: agent.rs  configuration.rs  flake.rs
nxy-common/: Cargo.toml
nxy-common/src/: lib.rs  types.rs
nxy-rpc/: Cargo.toml
nxy-rpc/src/: jsonrpc.rs
nxy-server/: Cargo.toml  sqlx-data.json
nxy-server/migrations/: 20221009070125_initial_migration.down.sql  20221009070125_initial_migration.up.sql  20221218184928_agent_system_configuration.down.sql  20221218184928_agent_system_configuration.up.sql
nxy-server/src/: agent.rs  config.rs  lib.rs  main.rs  nix.rs
nxy-server/src/http/: error.rs  flakes.rs  mod.rs  nixos_configuration.rs
nxy-server/src/http/agent/: mod.rs  websocket.rs
src/: agent.rs  api.rs  cli.rs  deploy.rs  error.rs  flake.rs  lib.rs  main.rs  nix.rs  profile.rs  push.rs  rpc.rs  server.rs
src/http/: flakes.rs  mod.rs
src/http/agent/: mod.rs  websocket.rs
