[workspace]
members = ["crates/*"]

[package]
name = "nxy"
version = "0.1.0"
authors = ["Alexander Sieg <alex@xanderio.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.2", features = ["wrap_help", "derive"] }
color-eyre = "0.6.2"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
merge = "0.1.0"
tokio = { version = "1.21.2", features = ["process", "macros", "sync", "rt-multi-thread", "fs", "time", "tracing"] }
tracing = "0.1.36"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

deploy = { path = "crates/deploy" }
rpc = { path = "crates/rpc" }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "offline", "macros", "migrate", "json", "chrono", "uuid"] }
chrono = { version = "0.4.22", features = ["serde"] }
futures-util = "0.3.24"
axum = { version = "0.5.16", features = ["ws", "headers"] }
hyper = { version = "0.14.20", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace"] }
uuid = "1.2.1"
console-subscriber = "0.1.8"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
