[package]
name = "nxy-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.2"
tungstenite = "0.18.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

nxy-common = { path = "../nxy-common" }
tracing-error = "0.2.0"
serde_json = "1.0.91"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
serde = { version = "1.0.151", features = ["derive"] }
once_cell = "1.16.0"
