[package]
name = "nxy-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
ureq = { version = "2.5.0", features = ["json"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
uuid = { version = "1.2.2", features = ["serde"] }
tabled = { version = "0.10.0", features = ["color"] }
clap = { version = "4.0.32", features = ["derive"] }
