[package]
name = "nxy-server"
version = "0.1.0"
authors = ["Alexander Sieg <alex@xanderio.de>"]
edition = "2021"

[features]
default = []
tokio-console = ["console-subscriber"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = [
        "process",
        "macros",
        "sync",
        "rt-multi-thread",
        "fs",
        "time",
        "tracing",
] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

nxy-common = { path = "../nxy-common" }
sqlx = { version = "0.6.2", features = [
        "runtime-tokio-rustls",
        "postgres",
        "offline",
        "macros",
        "migrate",
        "json",
        "chrono",
        "uuid",
] }
chrono = { version = "0.4.23", features = ["serde"] }
futures-util = "0.3.26"
axum = { version = "0.6.1", features = ["ws", "headers", "macros"] }
hyper = { version = "0.14.24", features = [] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
uuid = "1.3.0"
thiserror = "1.0.38"

console-subscriber = { version = "0.1.8", optional = true }
