[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
futures-util = "0.3.25"
tokio-tungstenite = "0.17.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

rpc = { path = "../rpc" }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tracing-error = "0.2.0"
